Responsive design update. Macbook removed. Fixed overlapping

--- a/Resources/sass/index.scss
+++ b/Resources/sass/index.scss
@@ -560,22 +560,33 @@ height: 210px;
   background: #111;
 }
 
+#footerTitle{
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+
+  #footerTitle{
+    font-size: 36px;
+      }
+  
+  }
+
+  
+
 
 /* WHERE DO WE GO NEXT */
 
-.img{
-  height: 345px !important;
-}
 
-.panel-heading:hover {
-    cursor:pointer;
-}
 .panel-heading {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;    
+    &:hover {
+      cursor:pointer;
+  }
 }
 
 .side-tab:hover {
@@ -587,17 +598,16 @@ height: 210px;
         box-shadow: none !important;
         border-bottom-right-radius: 0px;
         border-bottom-left-radius: 0px;
-        
     }
 
     .panel-heading {
         border: none;
         background-color: $mainBlue;
+        &:hover{
+          background-color: #0050aa;  
+        } 
     }
-    .panel-heading:hover{
-      background-color: #0050aa;
-    }
-
+    
     .panel-body {
         background-color: #eee;
         @include shadowBottom(0, 8px, 6px, -6px, #000);
@@ -607,146 +617,12 @@ height: 210px;
         color: white;
     }
 
-/*----------------------------------
-    Macbook pro mockup from:
-    http://jaredhardy.com/minimal-devices/
-    
-----------------------------------*/
-
-.md-macbook-pro {
-  display: block;
-  width: 55.3125em;
-  height: 31.875em;
-  font-size: 13px;
-  margin: 0 auto;
-
-}
+    .tab-featured-image{
+     width: 100%;
+     border: 2px solid #FFF;
+    }
 
 
-
-  @media (max-width:1199px){
-
-.md-macbook-pro {
-    width: 45%;
-  height: 26%;
-}
-  
-  }
-
-
-  @media (max-width:1024px){
-
-.md-macbook-pro {
-      width: 40%;
-  height: 22%;
-}
-
-  }
-
-  @media (max-width:767px){
-
-    .md-macbook-pro {
-      width: 30%;
-  height: 18%;
-  }
-
-  }
-
-  @media (max-width:320px){
-
-    .md-macbook-pro {
-      width: 18%;
-  height: 5%;
-}
-      
-  }
-
-
-.md-macbook-pro .md-lid {
-  width: 45em;
-  height: 30.625em;
-  overflow: hidden;
-  margin: 0 auto;
-  position: relative;
-  border-radius: 1.875em;
-  border: solid 0.1875em #cdced1;
-  background: #131313;
-}
-.md-macbook-pro .md-camera {
-  width: 0.375em;
-  height: 0.375em;
-  margin: 0 auto;
-  position: relative;
-  top: 1.0625em;
-  background: #000;
-  border-radius: 100%;
-  box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.25);
-}
-.md-macbook-pro .md-camera:after {
-  content: "";
-  display: block;
-  width: 0.125em;
-  height: 0.125em;
-  position: absolute;
-  left: 0.125em;
-  top: 0.0625em;
-  background: #353542;
-  border-radius: 100%;
-}
-.md-macbook-pro .md-screen {
-  width: 42.25em;
-  height: 26.375em;
-  margin: 0 auto;
-  position: relative;
-  top: 2.0625em;
-  background: #fff;
-  overflow: hidden;
-}
-.md-macbook-pro .md-screen img {
-  width: 100%;
-}
-.md-macbook-pro .md-base {
-  width: 100%;
-  height: 0.9375em;
-  position: relative;
-  top: -0.75em;
-  background: #c6c7ca;
-}
-.md-macbook-pro .md-base:after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 0.5em;
-  margin: 0 auto;
-  position: relative;
-  bottom: -0.1875em;
-  background: #b9babe;
-  border-radius: 0 0 1.25em 1.25em;
-}
-.md-macbook-pro .md-base:before {
-  content: "";
-  display: block;
-  width: 7.6875em;
-  height: 0.625em;
-  margin: 0 auto;
-  position: relative;
-  background: #a6a8ad;
-  border-radius: 0 0 0.625em 0.625em;
-}
-.md-macbook-pro.md-glare .md-lid:after {
-  content: "";
-  display: block;
-  width: 50%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border-radius: 0 1.25em 0 0;
-  background: -webkit-linear-gradient(37deg, rgba(255, 255, 255, 0) 50%, rgba(247, 248, 240, 0.025) 50%, rgba(250, 245, 252, 0.08));
-  background: -moz-linear-gradient(37deg, rgba(255, 255, 255, 0) 50%, rgba(247, 248, 240, 0.025) 50%, rgba(250, 245, 252, 0.08));
-  background: -o-linear-gradient(37deg, rgba(255, 255, 255, 0) 50%, rgba(247, 248, 240, 0.025) 50%, rgba(250, 245, 252, 0.08));
-  background: linear-gradient(53deg, rgba(255, 255, 255, 0) 50%, rgba(247, 248, 240, 0.025) 50%, rgba(250, 245, 252, 0.08));
-}
 
 /* NAVBAR */
 
